Ajuste swagger